# sharkdrown

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile_baseos  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: build_image_baseos.yaml  build_sharkdrown.yaml
documents/: example.md
static/css/: editor.css
static/js/: editor.js  filter.js  lint.js  mermaid_editor.js  transform.js
templates/: editor.html
